Mobile responsive fixes (including following icon) (#438)
* indent following icons and text on mobile view.

to stop horizontal scroll and make it look better. fixes #431

* make following header look better on topic#show

particularly on mobile view

--- a/app/assets/stylesheets/thredded/components/_topic-header.scss
+++ b/app/assets/stylesheets/thredded/components/_topic-header.scss
@@ -5,6 +5,7 @@
     margin-bottom: $thredded-small-spacing;
     margin-top: 0;
   }
+  @include thredded--clearfix;
 }
 
 .thredded--topic-header--title {
